--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -239,8 +239,16 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "ts-node",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "tsup",
       "allowedCategories": [ "brand", "tools" ]
+    },
+    {
+      "name": "tsx",
+      "allowedCategories": [ "react" ]
     },
     {
       "name": "typescript",
