--- a/components/react/package.json
+++ b/components/react/package.json
@@ -39,7 +39,8 @@
   ],
   "scripts": {
     "dev": "vite --config vite.build.config.ts",
-    "build": "tsc && vite build --config vite.build.config.ts",
+    "build": "pnpm build:color-css && tsc && vite build --config vite.build.config.ts",
+    "build:color-css": "ts-node-esm generate-colors-css.ts",
     "lint": "eslint . --cache --report-unused-disable-directives --max-warnings 0",
     "lint-fix": "eslint . --cache --fix --report-unused-disable-directives --max-warnings 0",
     "format": "prettier . --write --cache",
@@ -78,6 +79,7 @@
     "@storybook/testing-library": "0.2.2",
     "@storybook/theming": "7.6.17",
     "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@types/node": "20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
     "@vitejs/plugin-react": "4.2.1",
@@ -96,6 +98,7 @@
     "storybook": "7.6.17",
     "tailwindcss": "3.4.1",
     "tailwindcss-radix": "2.8.0",
+    "ts-node": "10.9.2",
     "typescript": "5.3.3",
     "vite": "4.5.2",
     "vite-plugin-dts": "3.7.3",
