--- a/components/react/tsconfig.json
+++ b/components/react/tsconfig.json
@@ -35,7 +35,7 @@
       "static/*": ["../static/*"]
     }
   },
-  "include": ["src", "*.config.ts", "*.config.js"],
+  "include": ["src", "*.config.ts", "*.config.js", "generate-colors-css.ts"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
