style: extract storybook styles and export styles for import

--- a/components/react/package.json
+++ b/components/react/package.json
@@ -7,7 +7,9 @@
   "types": "./dist/react-components.d.ts",
   "style": "./src/styles/index.css",
   "files": [
-    "dist"
+    "dist",
+    "src/styles/colors.css",
+    "src/styles/index.css"
   ],
   "repository": {
     "type": "git",
