--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ssh-key: ${{ secrets.PRERELEASE_SSH_KEY }}
           fetch-depth: 0
       - name: Git config user
         uses: snow-actions/git-config-user@v1.0.0
