--- a/components/react/package.json
+++ b/components/react/package.json
@@ -67,19 +67,18 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@ivaoaero/eslint-config": "workspace:1.1.0-next",
     "@ivaoaero/prettier-config": "workspace:2.1.0-next",
-    "@storybook/addon-docs": "7.6.17",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "7.6.17",
-    "@storybook/addon-links": "7.6.17",
-    "@storybook/addon-mdx-gfm": "7.6.17",
-    "@storybook/addon-styling": "1.3.7",
-    "@storybook/addons": "7.6.17",
-    "@storybook/blocks": "7.6.17",
-    "@storybook/builder-vite": "7.6.17",
-    "@storybook/react": "7.6.17",
-    "@storybook/react-vite": "7.6.17",
+    "@storybook/addon-essentials": "8.0.4",
+    "@storybook/addon-interactions": "8.0.4",
+    "@storybook/addon-links": "8.0.4",
+    "@storybook/addon-mdx-gfm": "8.0.4",
+    "@storybook/addon-themes": "8.0.4",
+    "@storybook/blocks": "8.0.4",
+    "@storybook/builder-vite": "8.0.4",
+    "@storybook/manager-api": "8.0.4",
+    "@storybook/react": "8.0.4",
+    "@storybook/react-vite": "8.0.4",
     "@storybook/testing-library": "0.2.2",
-    "@storybook/theming": "7.6.17",
+    "@storybook/theming": "8.0.4",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
@@ -97,14 +96,14 @@
     "postcss": "8.4.35",
     "prettier": "3.2.5",
     "rollup-plugin-analyzer": "4.0.0",
-    "storybook": "7.6.17",
+    "storybook": "^8.0.4",
     "tailwindcss": "3.4.1",
     "tailwindcss-radix": "2.8.0",
     "ts-node": "10.9.2",
     "typescript": "5.3.3",
     "vite": "4.5.2",
     "vite-plugin-dts": "3.7.3",
-    "vite-tsconfig-paths": "4.3.1"
+    "vite-tsconfig-paths": "4.3.2"
   },
   "peerDependencies": {
     "@carbon/icons-react": "11.37.0",
