--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -7,14 +7,6 @@
       "allowedCategories": [ "react" ]
     },
     {
-      "name": "@commitlint/cli",
-      "allowedCategories": [ "brand", "react", "tools" ]
-    },
-    {
-      "name": "@commitlint/config-conventional",
-      "allowedCategories": [ "brand", "react", "tools" ]
-    },
-    {
       "name": "@ianvs/prettier-plugin-sort-imports",
       "allowedCategories": [ "brand", "react", "tools" ]
     },
@@ -24,7 +16,7 @@
     },
     {
       "name": "@ivaoaero/eslint-config",
-      "allowedCategories": [ "brand", "react", "tools" ]
+      "allowedCategories": [ "brand", "react" ]
     },
     {
       "name": "@ivaoaero/prettier-config",
@@ -51,18 +43,6 @@
       "allowedCategories": [ "react" ]
     },
     {
-      "name": "@semantic-release/git",
-      "allowedCategories": [ "brand", "react", "tools" ]
-    },
-    {
-      "name": "@semantic-release/npm",
-      "allowedCategories": [ "brand", "react", "tools" ]
-    },
-    {
-      "name": "@storybook/addon-docs",
-      "allowedCategories": [ "react" ]
-    },
-    {
       "name": "@storybook/addon-essentials",
       "allowedCategories": [ "react" ]
     },
@@ -79,15 +59,7 @@
       "allowedCategories": [ "react" ]
     },
     {
-      "name": "@storybook/addon-styling",
-      "allowedCategories": [ "react" ]
-    },
-    {
       "name": "@storybook/addon-themes",
-      "allowedCategories": [ "react" ]
-    },
-    {
-      "name": "@storybook/addons",
       "allowedCategories": [ "react" ]
     },
     {
@@ -121,10 +93,6 @@
     {
       "name": "@tanstack/react-table",
       "allowedCategories": [ "react" ]
-    },
-    {
-      "name": "@trivago/prettier-plugin-sort-imports",
-      "allowedCategories": [ "tools" ]
     },
     {
       "name": "@typescript-eslint/eslint-plugin",
@@ -199,14 +167,6 @@
       "allowedCategories": [ "brand", "react", "tools" ]
     },
     {
-      "name": "prettier-config-ivaoaero",
-      "allowedCategories": [ "tools" ]
-    },
-    {
-      "name": "prettier-plugin-tailwindcss",
-      "allowedCategories": [ "tools" ]
-    },
-    {
       "name": "react",
       "allowedCategories": [ "react" ]
     },
@@ -217,14 +177,6 @@
     {
       "name": "rollup-plugin-analyzer",
       "allowedCategories": [ "react" ]
-    },
-    {
-      "name": "semantic-release",
-      "allowedCategories": [ "brand", "react", "tools" ]
-    },
-    {
-      "name": "semantic-release-monorepo",
-      "allowedCategories": [ "brand", "react", "tools" ]
     },
     {
       "name": "storybook",
@@ -252,11 +204,7 @@
     },
     {
       "name": "tsup",
-      "allowedCategories": [ "brand", "tools" ]
-    },
-    {
-      "name": "tsx",
-      "allowedCategories": [ "react" ]
+      "allowedCategories": [ "brand" ]
     },
     {
       "name": "typescript",
