feat(react/nav-menu): add `NavigationMenu` atoms ATMOS-28

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -35,6 +35,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-navigation-menu",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-select",
       "allowedCategories": [ "react" ]
     },
