feat(react/nav-menu): add `NavigationMenu` molecule

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -183,6 +183,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "react-router-dom",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "rollup-plugin-analyzer",
       "allowedCategories": [ "react" ]
     },
