--- a/components/react/package.json
+++ b/components/react/package.json
@@ -110,7 +110,8 @@
   "peerDependencies": {
     "@carbon/icons-react": "11.37.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3"
   },
   "publishConfig": {
     "access": "public",
