--- a/components/react/package.json
+++ b/components/react/package.json
@@ -62,7 +62,8 @@
     "clsx": "2.1.0",
     "lucide-react": "0.363.0",
     "tailwind-merge": "2.2.2",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "@radix-ui/react-dropdown-menu": "~2.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
