--- a/components/react/package.json
+++ b/components/react/package.json
@@ -110,8 +110,7 @@
   "peerDependencies": {
     "@carbon/icons-react": "11.37.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3"
+    "react-dom": "18.2.0"
   },
   "publishConfig": {
     "access": "public",
