--- a/components/react/package.json
+++ b/components/react/package.json
@@ -53,6 +53,7 @@
     "@ivaoaero/atmosphere-brand": "workspace:1.1.0-next",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-switch": "1.0.3",
@@ -62,8 +63,7 @@
     "clsx": "2.1.0",
     "lucide-react": "0.363.0",
     "tailwind-merge": "2.2.2",
-    "tailwindcss-animate": "1.0.7",
-    "@radix-ui/react-dropdown-menu": "~2.0.6"
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
