--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -43,6 +43,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-radio-group",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-select",
       "allowedCategories": [ "react" ]
     },
