--- a/components/react/package.json
+++ b/components/react/package.json
@@ -53,6 +53,7 @@
     "@ivaoaero/atmosphere-brand": "workspace:1.1.0-next-a3ce143d60c29e70d82b3b91914afe9371f18fae",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-navigation-menu": "1.1.4",
