--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -55,6 +55,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-separator",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-switch",
       "allowedCategories": [ "react" ]
     },
