feat(react/tooltip): add `Tooltip` atoms and molecule ATMOS-47

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -67,6 +67,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-tooltip",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@storybook/addon-essentials",
       "allowedCategories": [ "react" ]
     },
