--- a/components/react/package.json
+++ b/components/react/package.json
@@ -63,6 +63,7 @@
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.1.5",
     "@tanstack/react-table": "8.15.0",
+    "@radix-ui/react-tooltip": "1.0.7",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "lucide-react": "0.363.0",
