feat(react/toggle): add `Toggle` atom ATMOS-45

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -67,6 +67,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-toggle",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@storybook/addon-essentials",
       "allowedCategories": [ "react" ]
     },
