feat(react/scroll-area): add `ScrollArea` atoms and molecule ATMOS-34

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -51,6 +51,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-scroll-area",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-select",
       "allowedCategories": [ "react" ]
     },
