feat(react/slider): add `Slider` atoms and molecule
refactor: move Radix elements to atoms and convert `Slider` into a molecule

chore: standardised export paths and minor fixes

chore: wrap CSS classes with `cn`

chore(atoms/slider): normalise `className` passed as props

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -59,6 +59,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-slider",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-switch",
       "allowedCategories": [ "react" ]
     },
