feat(react/toggle-group): add `ToggleGroup` atoms and molecule ATMOS-46

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -83,6 +83,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-toggle-group",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-tooltip",
       "allowedCategories": [ "react" ]
     },
