wip: popover atoms

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -47,6 +47,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-popover",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-radio-group",
       "allowedCategories": [ "react" ]
     },
