feat(react/command): add `Command` and `CommandDialog` atoms+molecules ATMOS-15

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -163,6 +163,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "cmdk",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "eslint",
       "allowedCategories": [ "brand", "react", "tools" ]
     },
