feat(react/progress): add `Progress` atom ATMOS-31

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -47,6 +47,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-progress",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-radio-group",
       "allowedCategories": [ "react" ]
     },
