--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -31,6 +31,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-collapsible",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-dialog",
       "allowedCategories": [ "react" ]
     },
