--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -163,6 +163,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "embla-carousel-react",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "eslint",
       "allowedCategories": [ "brand", "react", "tools" ]
     },
