chore: update dependencies of all projects
BREAKING CHANGE: remove `@carbon/react-icons` as peer dependency for `@atmosphere/react` and removed usage

--- a/components/react/package.json
+++ b/components/react/package.json
@@ -51,82 +51,81 @@
   },
   "dependencies": {
     "@ivaoaero/atmosphere-brand": "workspace:1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
-    "@radix-ui/react-alert-dialog": "1.0.5",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-collapsible": "1.0.3",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-navigation-menu": "1.1.4",
-    "@radix-ui/react-popover": "1.0.7",
-    "@radix-ui/react-progress": "1.0.3",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-select": "2.0.0",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@tanstack/react-table": "8.15.0",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-toggle": "1.0.3",
-    "@radix-ui/react-toggle-group": "1.0.4",
-    "@radix-ui/react-tooltip": "1.0.7",
+    "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-collapsible": "1.1.0",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-navigation-menu": "1.2.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-progress": "1.1.0",
+    "@radix-ui/react-radio-group": "1.2.0",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slider": "1.2.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
+    "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-toggle": "1.1.0",
+    "@radix-ui/react-toggle-group": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.2",
+    "@tanstack/react-table": "8.20.5",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
-    "date-fns": "~3.6.0",
-    "embla-carousel-react": "8.1.3",
-    "lucide-react": "0.363.0",
+    "clsx": "2.1.1",
+    "date-fns": "3.6.0",
+    "embla-carousel-react": "8.3.0",
+    "lucide-react": "0.445.0",
     "react-day-picker": "8.10.1",
-    "tailwind-merge": "2.2.2",
+    "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@ivaoaero/eslint-config": "workspace:1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
     "@ivaoaero/prettier-config": "workspace:2.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
-    "@storybook/addon-essentials": "8.0.4",
-    "@storybook/addon-interactions": "8.0.4",
-    "@storybook/addon-links": "8.0.4",
-    "@storybook/addon-mdx-gfm": "8.0.4",
-    "@storybook/addon-themes": "8.0.4",
-    "@storybook/blocks": "8.0.4",
-    "@storybook/builder-vite": "8.0.4",
-    "@storybook/manager-api": "8.0.4",
-    "@storybook/react": "8.0.4",
-    "@storybook/react-vite": "8.0.4",
+    "@storybook/addon-essentials": "8.3.2",
+    "@storybook/addon-interactions": "8.3.2",
+    "@storybook/addon-links": "8.3.2",
+    "@storybook/addon-mdx-gfm": "8.3.2",
+    "@storybook/addon-themes": "8.3.2",
+    "@storybook/blocks": "8.3.2",
+    "@storybook/builder-vite": "8.3.2",
+    "@storybook/manager-api": "8.3.2",
+    "@storybook/react": "8.3.2",
+    "@storybook/react-vite": "8.3.2",
     "@storybook/testing-library": "0.2.2",
-    "@storybook/theming": "8.0.4",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.72",
-    "@types/react-dom": "18.2.22",
-    "@vitejs/plugin-react": "4.2.1",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.6",
+    "@storybook/theming": "8.3.2",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.1",
+    "eslint-plugin-jsx-a11y": "6.10.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.36.1",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.12",
     "eslint-plugin-storybook": "0.8.0",
-    "eslint-plugin-tailwindcss": "3.15.1",
-    "postcss": "8.4.38",
-    "prettier": "3.2.5",
+    "eslint-plugin-tailwindcss": "3.17.4",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
     "rollup-plugin-analyzer": "4.0.0",
-    "storybook": "^8.0.4",
-    "tailwindcss": "3.4.1",
-    "tailwindcss-radix": "3.0.2",
+    "storybook": "8.3.2",
+    "tailwindcss": "3.4.12",
+    "tailwindcss-radix": "3.0.5",
     "ts-node": "10.9.2",
-    "typescript": "5.4.3",
-    "vite": "5.2.6",
-    "vite-plugin-dts": "3.7.3",
-    "vite-tsconfig-paths": "4.3.2"
+    "typescript": "5.6.2",
+    "vite": "5.4.7",
+    "vite-plugin-dts": "4.2.1",
+    "vite-tsconfig-paths": "5.0.1"
   },
   "peerDependencies": {
-    "@carbon/icons-react": "11.37.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "publishConfig": {
     "access": "public",
