--- a/brand/package.json
+++ b/brand/package.json
@@ -1,10 +1,8 @@
 {
   "name": "@ivaoaero/atmosphere-brand",
-  "version": "1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
   "description": "IVAO Atmosphere design system brand package.",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "version": "1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -47,11 +45,9 @@
     "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@ivaoaero/eslint-config": "workspace:1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
     "@ivaoaero/prettier-config": "workspace:2.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "eslint": "8.57.1",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-tailwindcss": "3.17.4",
+    "eslint": "9.11.0",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "tsup": "8.3.0",
     "typescript": "5.6.2"
   },
