--- a/brand/tsconfig.json
+++ b/brand/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
     "composite": false,
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
+    "declaration": false,
+    "declarationMap": false,
+    "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
     "moduleResolution": "node",
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
     "strict": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "module": "CommonJS"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["src"]
