--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -2,8 +2,10 @@
   "name": "@ivaoaero/eslint-config",
   "description": "IVAO eslint config.",
   "version": "1.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
-  "main": "index.js",
-  "module": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "/*.js"
   ],
@@ -28,33 +30,38 @@
     }
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup",
     "lint": "eslint . --cache --report-unused-disable-directives --max-warnings 0",
     "lint-fix": "eslint . --cache --report-unused-disable-directives --max-warnings 0 --fix",
     "format": "prettier . --write --cache"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "7.18.0"
-  },
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
-    "@ivaoaero/prettier-config": "workspace:2.1.0-next-9e7f354d26098c34101ef16b1c9163f25ef715c8",
-    "@types/eslint": "8.56.12",
-    "@types/node": "22.5.5",
-    "prettier": "3.3.3"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "eslint": "8.57.1",
+    "@eslint/compat": "1.1.1",
+    "@eslint/js": "9.11.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jsx-a11y": "6.10.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.36.1",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc-e4953922-20240919",
     "eslint-plugin-react-refresh": "0.4.12",
-    "eslint-plugin-storybook": "0.8.0",
-    "eslint-plugin-tailwindcss": "3.17.4"
+    "eslint-plugin-storybook": "0.9.0--canary.156.26b630a.0",
+    "eslint-plugin-tailwindcss": "3.17.4",
+    "globals": "15.9.0",
+    "typescript-eslint": "8.6.0"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
+    "@types/eslint-config-prettier": "6.11.3",
+    "@types/eslint-plugin-jsx-a11y": "6.9.0",
+    "@types/eslint-plugin-tailwindcss": "3.17.0",
+    "@types/eslint__js": "8.42.3",
+    "@types/node": "22.5.5",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "tsup": "8.3.0"
+  },
+  "peerDependencies": {
+    "eslint": "9.11.0"
   },
   "publishConfig": {
     "access": "public",
