--- a/tools/prettier/tsconfig.json
+++ b/tools/prettier/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
     "composite": false,
-    "declaration": false,
+    "declaration": true,
     "declarationMap": false,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
-    "isolatedModules": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "preserveWatchOutput": true,
-    "skipLibCheck": true,
     "strict": true,
     "outDir": "./dist",
     "module": "CommonJS"
