feat(react/accordion): add `Accordion` atoms and molecules

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -27,6 +27,10 @@
       "allowedCategories": [ "brand", "react", "tools" ]
     },
     {
+      "name": "@radix-ui/react-accordion",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-alert-dialog",
       "allowedCategories": [ "react" ]
     },
