--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -7,7 +7,8 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "/*.js"
+    "dist/index.js",
+    "dist/index.d.ts"
   ],
   "repository": {
     "type": "git",
