feat(hover-card): add atoms and molecule ATMOS-23

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -51,6 +51,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-hover-card",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-label",
       "allowedCategories": [ "react" ]
     },
