--- a/components/react/package.json
+++ b/components/react/package.json
@@ -45,7 +45,8 @@
     "lint-fix": "eslint . --cache --fix --report-unused-disable-directives --max-warnings 0",
     "format": "prettier . --write --cache",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@ivao/atmosphere-brand": "workspace:*",
@@ -86,6 +87,9 @@
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@ivao/eslint-config": "1.0.1",
     "@ivao/prettier-config": "1.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-interactions": "8.6.4",
     "@storybook/addon-links": "8.6.4",
@@ -108,6 +112,8 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "rollup-plugin-analyzer": "4.0.0",
+    "semantic-release": "^24.2.3",
+    "semantic-release-monorepo": "^8.0.2",
     "storybook": "8.6.4",
     "tailwindcss": "3.4.17",
     "tailwindcss-radix": "3.0.5",
