ci: run lint on all packages

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,4 +25,4 @@ jobs:
         run: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
 
       - name: Lint files
-        run: pnpm lint
+        run: pnpm -r lint
