ci(lint): build required packages for linting

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,5 +24,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
 
+      - name: Build dependency packages
+        run: pnpm --filter="@ivao/atmosphere-brand" build
+
       - name: Lint files
         run: pnpm -r lint
