ci(debug): get store path

--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -21,5 +21,7 @@ jobs:
           scope: '@ivaoaero'
           cache: 'pnpm'
 
+      - run: pnpm store path
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
