--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,4 +25,4 @@ jobs:
         run: pnpm --filter="@ivao/atmosphere-brand" build
 
       - name: Lint files
-        run: pnpm -r lint
+        run: pnpm -r lint:ci
