--- a/brand/package.json
+++ b/brand/package.json
@@ -36,6 +36,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint . --cache --report-unused-disable-directives --max-warnings 0",
+    "lint:ci": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint-fix": "eslint . --cache --report-unused-disable-directives --max-warnings 0 --fix",
     "format": "prettier . --write --cache",
     "release": "semantic-release"
