--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,8 +53,10 @@ jobs:
             brand/dist
             components/react/dist
 
-      - name: Delete local tags
-        run: git tag -d $(git tag -l)
+      - name: Verify build downloaded
+        run: |
+          ls -la brand
+          ls -la components/react
 
       - name: Release atmosphere packages
         run: pnpm -r release
