--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,13 +50,13 @@ jobs:
         with:
           name: build
           path: |
-            if test -d brand/dist; then echo "exists react"; fi
-            if test -d components/react/dist; then echo "exists react"; fi
+            brand/dist
+            components/react/dist
 
       - name: Verify build downloaded
         run: |
-          ls -la brand
-          ls -la components/react
+          if test -d brand/dist; then echo "exists react"; fi
+          if test -d components/react/dist; then echo "exists react"; fi
 
       - name: Release atmosphere packages
         run: pnpm -r release
