--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,10 +24,14 @@ jobs:
       - name: Build atmosphere packages
         run: pnpm -r build
 
-      - name: Upload build artifacts
+      - name: Upload brand artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: |
-            brand/dist
-            components/react/dist
+          name: brand-build
+          path: brand/dist
+
+      - name: Upload react-components artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: react-components-build
+          path: components/react/dist
