--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,13 +45,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Downloading brand artifacts
+        uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: |
-            brand/dist
-            components/react/dist
+          name: brand-build
+          path: brand/dist
+
+      - name: Downloading react-components artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: react-components-build
+          path: components/react/dist
 
       - name: Verify build downloaded
         run: |
