--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,13 +46,13 @@ jobs:
         run: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
 
       - name: Downloading brand artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: brand-build
           path: brand/dist
 
       - name: Downloading react-components artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: react-components-build
           path: components/react/dist
