--- a/components/react/package.json
+++ b/components/react/package.json
@@ -51,71 +51,71 @@
   },
   "dependencies": {
     "@ivao/atmosphere-brand": "workspace:*",
-    "@radix-ui/react-accordion": "1.2.1",
-    "@radix-ui/react-alert-dialog": "1.1.1",
-    "@radix-ui/react-checkbox": "1.1.1",
-    "@radix-ui/react-collapsible": "1.1.0",
-    "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-alert-dialog": "1.1.6",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-collapsible": "1.1.3",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
     "@radix-ui/react-hover-card": "1.1.6",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-navigation-menu": "1.2.0",
-    "@radix-ui/react-popover": "1.1.1",
-    "@radix-ui/react-progress": "1.1.0",
-    "@radix-ui/react-radio-group": "1.2.0",
-    "@radix-ui/react-scroll-area": "1.1.0",
-    "@radix-ui/react-select": "2.1.1",
-    "@radix-ui/react-separator": "1.1.0",
-    "@radix-ui/react-slider": "1.2.0",
-    "@radix-ui/react-switch": "1.1.0",
-    "@radix-ui/react-tabs": "1.1.0",
-    "@radix-ui/react-toast": "1.2.1",
-    "@radix-ui/react-toggle": "1.1.0",
-    "@radix-ui/react-toggle-group": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.2",
-    "@tanstack/react-table": "8.20.5",
-    "class-variance-authority": "0.7.0",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-progress": "1.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-scroll-area": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slider": "1.2.3",
+    "@radix-ui/react-switch": "1.1.3",
+    "@radix-ui/react-tabs": "1.1.3",
+    "@radix-ui/react-toast": "1.2.6",
+    "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-toggle-group": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
+    "@tanstack/react-table": "8.21.2",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "cmdk": "1.0.3",
+    "cmdk": "1.1.1",
     "date-fns": "3.6.0",
-    "embla-carousel-react": "8.3.0",
-    "lucide-react": "0.445.0",
+    "embla-carousel-react": "8.5.2",
+    "lucide-react": "0.483.0",
     "react-day-picker": "8.10.1",
-    "tailwind-merge": "2.5.2",
+    "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
-    "@ivao/eslint-config": "1.0.1",
-    "@ivao/prettier-config": "1.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@storybook/addon-essentials": "8.6.4",
-    "@storybook/addon-interactions": "8.6.4",
-    "@storybook/addon-links": "8.6.4",
-    "@storybook/addon-mdx-gfm": "8.6.4",
-    "@storybook/addon-themes": "8.6.4",
-    "@storybook/blocks": "8.6.4",
-    "@storybook/builder-vite": "8.6.4",
-    "@storybook/manager-api": "8.6.4",
-    "@storybook/react": "8.6.4",
-    "@storybook/react-vite": "8.6.4",
-    "@storybook/test": "8.6.4",
-    "@storybook/theming": "8.6.4",
-    "@types/node": "22.13.9",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@ivao/eslint-config": "1.1.1",
+    "@ivao/prettier-config": "1.1.0",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "11.0.1",
+    "@semantic-release/npm": "12.0.1",
+    "@storybook/addon-essentials": "8.6.7",
+    "@storybook/addon-interactions": "8.6.7",
+    "@storybook/addon-links": "8.6.7",
+    "@storybook/addon-mdx-gfm": "8.6.7",
+    "@storybook/addon-themes": "8.6.7",
+    "@storybook/blocks": "8.6.7",
+    "@storybook/builder-vite": "8.6.7",
+    "@storybook/manager-api": "8.6.7",
+    "@storybook/react": "8.6.7",
+    "@storybook/react-vite": "8.6.7",
+    "@storybook/test": "8.6.7",
+    "@storybook/theming": "8.6.7",
+    "@types/node": "22.13.11",
+    "@types/react": "18.3.19",
+    "@types/react-dom": "18.3.5",
     "@vitejs/plugin-react": "4.3.4",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.21.0",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.22.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "rollup-plugin-analyzer": "4.0.0",
-    "semantic-release": "^24.2.3",
-    "semantic-release-monorepo": "^8.0.2",
-    "storybook": "8.6.4",
+    "semantic-release": "24.2.3",
+    "semantic-release-monorepo": "8.0.2",
+    "storybook": "8.6.7",
     "tailwindcss": "3.4.17",
     "tailwindcss-radix": "3.0.5",
     "ts-node": "10.9.2",
@@ -131,5 +131,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3"
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
