--- a/components/react/package.json
+++ b/components/react/package.json
@@ -85,12 +85,12 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@glzr/semantic-release-npm": "^1.5.0",
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@ivao/eslint-config": "1.1.1",
     "@ivao/prettier-config": "1.1.0",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "11.0.1",
-    "@semantic-release/npm": "12.0.1",
     "@storybook/addon-essentials": "8.6.7",
     "@storybook/addon-interactions": "8.6.7",
     "@storybook/addon-links": "8.6.7",
