--- a/components/react/package.json
+++ b/components/react/package.json
@@ -88,7 +88,7 @@
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@ivao/eslint-config": "1.1.1",
     "@ivao/prettier-config": "1.1.0",
-    "@mctom234/semantic-release-pnpm": "^1.0.1",
+    "@mctom234/semantic-release-pnpm": "1.0.1",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "11.0.1",
     "@storybook/addon-essentials": "8.6.7",
