--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,6 +52,9 @@ jobs:
           name: react-components-build
           path: components/react/dist
 
+      - name: Switch to normal release
+        run: pnpm changeset pre exit
+
       - name: Release atmosphere packages
         uses: changesets/action@v1
         with:
