--- a/components/react/package.json
+++ b/components/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ivao/atmosphere-react",
   "description": "React component library for the IVAO Atmosphere design system.",
-  "version": "0.0.1-next.0",
+  "version": "0.0.0",
   "type": "module",
   "main": "./dist/atmosphere-react.js",
   "types": "./dist/react-components.d.ts",
