--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: read # for checkout
 
+env:
+  CI: true
+
 jobs:
   build:
     uses: ./.github/workflows/build.yaml
@@ -57,7 +60,7 @@ jobs:
         with:
           commit: "chore: update versions"
           title: "chore: update versions"
-          publish: "pnpm publish -r"
+          publish: pnpm ci:release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
