--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+	"scripts": {
+		"ci:release": "pnpm publish -r",
+		"ci:prerelease": "pnpm publish -r --tag next --no-git-checks"
+	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
 		"@commitlint/cli": "^19.8.0",
