--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -55,6 +55,9 @@ jobs:
           name: react-components-build
           path: components/react/dist
 
+      - name: Set registry token in PNPM
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
+
       - name: Release atmosphere packages
         uses: changesets/action@v1
         with:
@@ -64,4 +67,3 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          "npm_config_//registry.npmjs.org/:_authToken": ${{ secrets.NPM_TOKEN }}
