feat: update button design, update readme & fix styles (#76)
* chore: update readme & add build and storybbok commands

* feat: update button variants

* feat: add loading to button

* feat: update fuselage-100 to a better tone of gray. Former one was blueish

* chore: fix font Nunito Sans

* chore: update font sizes for button

* feat: update dark button colors to white

* chore: fix dark primary disabled button

* chore: fix secondary bg contrast

* chore: add changeset

* chore: update pkg build name to prebuild

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"scripts": {
 		"ci:release": "pnpm publish -r",
-		"ci:prerelease": "pnpm publish -r --tag next --no-git-checks"
+		"ci:prerelease": "pnpm publish -r --tag next --no-git-checks",
+		"prebuild": "pnpm -C brand build",
+		"dev:react:storybook": "pnpm -C components/react storybook"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
