Fix Sidebar Item not having a defined size (#87)
* chore: add contributing readme

* chore: add dev commands

* fix: add a defined size for the sidebar item

* chore: add changeset

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 		"ci:release": "pnpm publish -r",
 		"ci:prerelease": "pnpm publish -r --tag next --no-git-checks",
 		"prebuild": "pnpm -C brand build",
-		"dev:react:storybook": "pnpm -C components/react storybook"
+		"dev:react:storybook": "pnpm -C components/react storybook",
+		"dev:react:build": "pnpm -C components/react build",
+		"dev:react:pack": "pnpm -C components/react pack"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
