Develop - Deploy Storybook to multiple environments (#90)
* chore: test new storybook build

* chore: test new storybook build

* chore: test new storybook build

* chore: test new storybook build

* chore: fix cache key

* chore: test custom path

* chore: test custom base path

* chore: test custom base path

* fix: remove base path config

* chore: test new action

* chore: update permissions

* chore: update contributors :)

* chore: add base path

* chore: clean up storybook ci

--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -1,34 +1,55 @@
 name: Storybook
 
 on:
+  workflow_call:
   push:
     branches:
       - main
+      - develop
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+concurrency:
+  group: "pages-${{ github.ref_name }}"
+  cancel-in-progress: true
 
 jobs:
   storybook:
     name: Storybook
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: "https://ivaoaero.github.io/atmosphere/${{github.ref_name}}"
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
+      - name: Set up cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+          key: node_modules-${{ github.ref_name }}
 
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@ivaoaero'
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@ivaoaero"
 
-      - name: Build & Publish Storybook
-        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+      - uses: pnpm/action-setup@v4
+
+      - name: Install & Build Atmosphere
+        env:
+          VITE_BASE_PATH: "/atmosphere/${{github.ref_name}}"
+        run: |
+          pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
+          pnpm prebuild
+          pnpm --filter=atmosphere-react build-storybook
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          checkout: false
-          install_command: pnpm install --frozen-lockfile --ignore-scripts --strict-peer-dependencies
-          build_command: pnpm --filter=atmosphere-react build-storybook
-          path: components/react/storybook-static/
+          target-folder: ${{ github.ref_name }}
+          folder: components/react/storybook-static/
