--- a/.github/workflows/commitlint.yaml
+++ b/.github/workflows/commitlint.yaml
@@ -6,10 +6,10 @@ on:
 jobs:
   commitlint:
     name: Lint commits
-    runs-on: self-hosted
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
       - uses: wagoid/commitlint-github-action@v6
         with:
-          configFile: './commitlint.config.ts'
+          configFile: "./commitlint.config.ts"
