--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -21,7 +21,7 @@ jobs:
     environment:
       name: github-pages
       url: "https://ivaoaero.github.io/atmosphere/${{github.ref_name}}"
-    runs-on: self-hosted
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
