--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -1,10 +1,7 @@
 name: Verify build on PR
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
+  push:
   workflow_dispatch:
 
 jobs:
