--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,6 +55,9 @@ jobs:
           name: react-components-build
           path: components/react/dist
 
+      - name: Set registry token in PNPM
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
+
       - name: Release atmosphere packages
         uses: changesets/action@v1
         with:
